# ml-analytics-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: AWS_AUTHENTICATION.md  CLI_COMMANDS.md  GSHEET_CONNECTOR_USAGE.md  SF_CONNECTOR_USAGE.md  SLACK_CONNECTOR_USAGE.md  SPARK_CONNECTOR_USAGE.md  TUNNEL_MANAGER.md
ml_analytics/: __init__.py  aws_auth.py  cli.py  data_connector.py  gsheet_connector.py  model_manager.py  model_tools.py  s3_connector.py  sf_connector.py  slack_connector.py  spark_connector.py  tunnel_manager.py  utils.py
ml_analytics_tools/: __init__.py  model_manager.py
ml_analytics_tools/ml_analytics_tools/: __init__.py  data_connector.py
tests/: test_aws_auth.py  test_db_s3.py  test_gsheet_connector.py  test_identity_column.py  test_model_manager.py  test_model_tools.py  test_s3_redshift_validation.py  test_sf_connector.py  test_tunnel_manager.py  test_utils.py
